# papas

./: BlockBuilder.cpp  BlockBuilder.h  CMakeLists.txt  DefinitionsCollections.h  NOTICE  NodeDefinitions.h  PFReconstructor.cpp  PFReconstructor.h  README.md  README.txt  Ruler.cpp  Ruler.h  TODO.txt  TODOlist.docx  TestDistance.cpp  TestFloodFill.cpp  TestPapasManager.h  format_clang.sh  init.sh  main.cpp  my_utilities_LinkDef.h  papasVersion.h  testFloodFill.cpp  testFloodFill.hpp
DAG/: CMakeLists.txt  DAG_example_boostany.cc  DAG_example_longidnode.cc  DAG_example_polymorphic.cc  directedacyclicgraph.h  simpleidentifier.cc  simpleidentifier.h
DAGtool/: CMakeLists.txt  FloodFill.h  directedacyclicgraph.h
DAGtool/examples/: DAG_example_boostany.cc  DAG_example_longidnode.cc  DAG_example_polymorphic.cc  simpleidentifier.cc  simpleidentifier.h
examples/: CMakeLists.txt  ConvertEDMPapas.cpp  ConvertEDMPapas.h  CreatClic.cpp  PythiaConnector.cpp  PythiaConnector.h  example_dag_pair.cpp  example_gun.cpp  example_loop.cpp  example_pdebug_python_comparer.cpp  example_plot.cpp  example_simple.cpp
examples/data/: ee_ZH_Zmumu_Hbb.root  pdebug_CLIC.sh  pdebug_CMS.sh
fastsim/: CMakeLists.txt  my_utilities.cc  my_utilities.cpp  my_utilities.h  selection.xml
graphtools/: CMakeLists.txt
graphtools/examples/: DAG_example_longidnode.cpp  simpleidentifier.cpp  simpleidentifier.h
graphtools/graphtools/: Distance.h  Edge.h  FloodFill.h  GraphBuilder.h  NodeDefinitions.h  Ruler.h
graphtools/papas/: DefinitionsNodes.h  DirectedAcyclicGraph.h  Distance.h  Edge.h  EventRuler.h  FloodFill.h  GraphBuilder.h  Ruler.h
graphtools/src/: Distance.cpp  Edge.cpp  EventRuler.cpp  GraphBuilder.cpp  Ruler.cpp
graphtools/tests/: TestDistance.cpp  TestFloodFill.cpp  TestGraphBuilder.cpp
main/: CMakeLists.txt  PythiaConnector.h  pythiaconnector.cpp
papas/: CMakeLists.txt  header.sh  header2.sh
papas/datatypes/: Cluster copy.h  Cluster.h  Definitions.h  DefinitionsCollections.h  Event.h  Helix.h  HistoryHelper.h  Id.h  IdCoder.h  Identifier.h  PFParticle.h  PapasEvent.h  Particle.h  ParticlePData.h  Path.h  SimParticle.h  Track.h
papas/datatypes/src/: Cluster.cpp  Event.cpp  Helix.cpp  HistoryHelper.cpp  Id.cpp  IdCoder.cpp  Identifier.cpp  PFParticle.cpp  PapasEvent.cpp  Particle.cpp  ParticlePData.cpp  Path.cpp  SimParticle.cpp  Track.cpp
papas/detectors/: CMS.h  CMSEcal.h  CMSField.h  CMSHcal.h  CMSTracker.h  Calorimeter.h  Clic.h  ClicEcal.h  ClicField.h  ClicHcal.h  ClicTracker.h  Detector.h  DetectorElement.h  Field.h  Material.h  SurfaceCylinder.h  Tracker.h  VolumeCylinder.h
papas/detectors/clic/: Clic.h  ClicEcal.h  ClicField.h  ClicHcal.h  ClicTracker.h
papas/detectors/cms/: CMS.h  CMSEcal.h  CMSField.h  CMSHcal.h  CMSTracker.h
papas/detectors/src/: CMS.cpp  CMSEcal.cpp  CMSField.cpp  CMSHcal.cpp  CMSTracker.cpp  Clic.cpp  ClicEcal.cpp  ClicField.cpp  ClicHcal.cpp  ClicTracker.cpp  Detector.cpp  DetectorElement.cpp  Field.cpp  Material.cpp  SurfaceCylinder.cpp  VolumeCylinder.cpp
papas/display/: AliceDisplay.h  Display.h  GBlob.h  GDetector.h  GDetectorElement.h  GTrajectories.h  PFApp.h  ViewPane.h
papas/display/src/: AliceDisplay.cpp  Display.cpp  GBlob.cpp  GDetector.cpp  GDetectorElement.cpp  GTrajectories.cpp  GTrajectory.cpp  PFApp.cpp  ViewPane.cpp
papas/graphtools/: BuildSubGraphs.h  DefinitionsNodes.h  DirectedAcyclicGraph.h  Distance.h  Edge.h  EventRuler.h  FloodFill.h  GraphBuilder.h  PapasEventRuler.h  Ruler.h
papas/graphtools/src/: BuildSubGraphs.cpp  Distance.cpp  Edge.cpp  EventRuler.cpp  GraphBuilder.cpp  PapasEventRuler.cpp  Ruler.cpp
papas/reconstruction/: BlockBuilder.h  BlockSplitter.h  BuildPFBlocks.h  MergeClusters.h  MergedClusterBuilder.h  PFBlock.h  PFBlockBuilder.h  PFBlockSplitter.h  PFEvent.h  PFEventDisplay.h  PFReconstructor.h  PapasManager.h  PapasManagerTester.h  SimplifyPFBlocks.h  TestMergedClusterBuilder.h  TestNewPapasManager.h  TestPapasManager.h
papas/reconstruction/src/: BlockBuilder.cpp  BlockSplitter.cpp  BuildPFBlocks.cpp  MergeClusters.cpp  MergedClusterBuilder.cpp  PFBlock.cpp  PFBlockBuilder.cpp  PFBlockSplitter.cpp  PFEvent.cpp  PFEventDisplay.cpp  PFReconstructor.cpp  PapasManager.cpp  PapasManagerTester.cpp  SimplifyPFBlocks.cpp  TestMergedClusterBuilder.cpp  TestNewPapasManager.cpp  TestPapasManager.cpp
papas/simulation/: HelixPropagator.h  Propagator.h  Simulator.h  StraightLinePropagator.h  TestSimulator.h
papas/simulation/src/: HelixPropagator.cpp  Propagator.cpp  Simulator.cpp  StraightLinePropagator.cpp  TestSimulator.cpp
papas/tests/: CMakeLists.txt  tests.cpp  unittest.cpp
papas/utility/: DeltaR.h  GeoTools.h  Log.h  Logger.h  PDebug.h  PapasPreProcessor.h  StringFormatter.h  TRandom.h
papas/utility/src/: DeltaR.cpp  GeoTools.cpp  Log.cpp  Logger.cpp  PDebug.cpp  Random.cpp  TRandom.cpp
papascpp/: CMakeLists.txt  test_macro.py
papascpp/datatypes/datatypes/: BaseParticle.h  Cluster.h  Definitions.h  DefinitionsCollections.h  Helix.h  Id.h  PFParticle.h  PParticle.h  ParticlePData.h  Path.h  SimParticle.h  Track.h  pTrack.h
papascpp/datatypes/src/: Cluster.cpp  Helix.cpp  Id.cpp  PFParticle.cpp  Particle.cpp  ParticlePData.cpp  Path.cpp  SimParticle.cpp  Track.cpp
papascpp/detectors/detectors/: CMS.h  detector.h  geometry.h  material.h
papascpp/detectors/src/: CMS.cpp  detector.cpp  geometry.cpp  material.cpp
papascpp/display/display/: AliceDisplay.h  displaycore.h  displaygeometry.h  displaypfobjects.h
papascpp/display/src/: AliceDisplay.cpp  displaycore.cpp  displaygeometry.cpp  displaypfobjects.cpp
papascpp/graphtools/examples/: DAG_example_boostany.cpp  DAG_example_longidnode.cpp  DAG_example_polymorphic.cpp  simpleidentifier.cpp  simpleidentifier.h
papascpp/graphtools/graphtools/: DefinitionsNodes.h  Edge.h  (+4 more)
papaslib/: CMakeLists.txt  selection.xml  test_macro.py
tests/: CMakeLists.txt  tests.cc  tests.cpp  unittest.cpp
tests/graphtools/: TestDistance.cpp  TestFloodFill.cpp  TestGraphBuilder.cpp
tests/rtest/: CMakeLists.txt  r_test.cpp
tests/utility/: TestRandom.cpp
(+362 files in other folders)
